--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body {
     height: 100vh;
 }
 
+/* Título fuera del recuadro */
+h1, h2 {
+    font-size: 2.5rem;
+    color: #D45D6D;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 /* Contenedor principal */
 .container {
     background-color: #FFF1E6;
@@ -20,15 +28,6 @@ body {
     width: 100%;
     max-width: 500px;
     text-align: left;
-    margin-bottom: 40px; /* Separar la sección de la dedicatoria */
-}
-
-/* Título */
-h1 {
-    font-size: 2rem;
-    color: #D45D6D;
-    display: inline;
-    margin-right: 10px;
 }
 
 /* Estilo de los inputs y botones */
