--- a/style.css
+++ b/style.css
@@ -11,27 +11,29 @@ body {
     height: 100vh;
 }
 
-/* Título fuera del recuadro */
+/* Título principal */
 .title {
     text-align: center;
-    font-size: 1.8rem;
+    font-size: 2rem;
     color: #D45D6D;
     margin-top: 20px;
 }
 
 .main-title {
     display: block;
-    font-size: 2rem;
+    font-size: 2.2rem;
     background-color: #FFFAF3;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
+/* Subtítulo */
 .sub-title {
-    display: block;
-    margin-top: 10px;
-    font-size: 1.5rem;
+    text-align: center;
+    font-size: 1.8rem;
+    color: #4E4B3C;
+    margin-top: 20px;
 }
 
 /* Contenedor principal */
