--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ body {
 /* Título principal */
 .title {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.8rem; /* Ajustado a un tamaño más pequeño */
     color: #D45D6D;
     margin-top: 20px;
 }
 
 .main-title {
     display: block;
-    font-size: 2.2rem;
+    font-size: 2rem; /* Ajustado el tamaño */
     background-color: #FFFAF3;
     padding: 10px;
     border-radius: 8px;
